--- a/app/index.html
+++ b/app/index.html
@@ -411,16 +411,32 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="star" data-rateyo-rating="4"></div>
-                            <h4 class="product-item__title">
-                                White Polo Men’s T-Shirt
-                            </h4>
-                            <div class="product-item__price">
-                                <div class="product-item__new-price">
-                                    $34.00
+                            <div class="product-item__wrapper-box">
+                                <div class="product-item__box">
+                                    <div
+                                        class="star"
+                                        data-rateyo-rating="4"></div>
+                                    <h4 class="product-item__title">
+                                        White Polo Men’s T-Shirt
+                                    </h4>
+                                    <div class="product-item__price">
+                                        <div class="product-item__new-price">
+                                            $34.00
+                                        </div>
+                                        <div class="product-item__old-price">
+                                            $27.00
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="product-item__old-price">
-                                    $27.00
+                                <div class="product-item__content-box">
+                                    <p class="product-item__text">
+                                        Lorem ipsum dolor sit amet, adipiscing
+                                        elit, sed de eusmod utlitoi labore et
+                                        dolore magna aliqua.
+                                    </p>
+                                    <button class="product-item__btn">
+                                        Add to cart
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -477,16 +493,32 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="star" data-rateyo-rating="3.5"></div>
-                            <h4 class="product-item__title">
-                                White Polo Men’s T-Shirt
-                            </h4>
-                            <div class="product-item__price">
-                                <div class="product-item__new-price">
-                                    $34.00
+                            <div class="product-item__wrapper-box">
+                                <div class="product-item__box">
+                                    <div
+                                        class="star"
+                                        data-rateyo-rating="3.5"></div>
+                                    <h4 class="product-item__title">
+                                        White Polo Men’s T-Shirt
+                                    </h4>
+                                    <div class="product-item__price">
+                                        <div class="product-item__new-price">
+                                            $34.00
+                                        </div>
+                                        <div class="product-item__old-price">
+                                            $27.00
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="product-item__old-price">
-                                    $27.00
+                                <div class="product-item__content-box">
+                                    <p class="product-item__text">
+                                        Lorem ipsum dolor sit amet, adipiscing
+                                        elit, sed de eusmod utlitoi labore et
+                                        dolore magna aliqua.
+                                    </p>
+                                    <button class="product-item__btn">
+                                        Add to cart
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -543,16 +575,32 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="star" data-rateyo-rating="5"></div>
-                            <h4 class="product-item__title">
-                                White Polo Men’s T-Shirt
-                            </h4>
-                            <div class="product-item__price">
-                                <div class="product-item__new-price">
-                                    $34.00
+                            <div class="product-item__wrapper-box">
+                                <div class="product-item__box">
+                                    <div
+                                        class="star"
+                                        data-rateyo-rating="4"></div>
+                                    <h4 class="product-item__title">
+                                        White Polo Men’s T-Shirt
+                                    </h4>
+                                    <div class="product-item__price">
+                                        <div class="product-item__new-price">
+                                            $34.00
+                                        </div>
+                                        <div class="product-item__old-price">
+                                            $27.00
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="product-item__old-price">
-                                    $27.00
+                                <div class="product-item__content-box">
+                                    <p class="product-item__text">
+                                        Lorem ipsum dolor sit amet, adipiscing
+                                        elit, sed de eusmod utlitoi labore et
+                                        dolore magna aliqua.
+                                    </p>
+                                    <button class="product-item__btn">
+                                        Add to cart
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -609,16 +657,32 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="star" data-rateyo-rating="4"></div>
-                            <h4 class="product-item__title">
-                                White Polo Men’s T-Shirt
-                            </h4>
-                            <div class="product-item__price">
-                                <div class="product-item__new-price">
-                                    $34.00
+                            <div class="product-item__wrapper-box">
+                                <div class="product-item__box">
+                                    <div
+                                        class="star"
+                                        data-rateyo-rating="5"></div>
+                                    <h4 class="product-item__title">
+                                        White Polo Men’s T-Shirt
+                                    </h4>
+                                    <div class="product-item__price">
+                                        <div class="product-item__new-price">
+                                            $34.00
+                                        </div>
+                                        <div class="product-item__old-price">
+                                            $27.00
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="product-item__old-price">
-                                    $27.00
+                                <div class="product-item__content-box">
+                                    <p class="product-item__text">
+                                        Lorem ipsum dolor sit amet, adipiscing
+                                        elit, sed de eusmod utlitoi labore et
+                                        dolore magna aliqua.
+                                    </p>
+                                    <button class="product-item__btn">
+                                        Add to cart
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -675,16 +739,32 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="star" data-rateyo-rating="4.5"></div>
-                            <h4 class="product-item__title">
-                                White Polo Men’s T-Shirt
-                            </h4>
-                            <div class="product-item__price">
-                                <div class="product-item__new-price">
-                                    $34.00
+                            <div class="product-item__wrapper-box">
+                                <div class="product-item__box">
+                                    <div
+                                        class="star"
+                                        data-rateyo-rating="3.5"></div>
+                                    <h4 class="product-item__title">
+                                        White Polo Men’s T-Shirt
+                                    </h4>
+                                    <div class="product-item__price">
+                                        <div class="product-item__new-price">
+                                            $34.00
+                                        </div>
+                                        <div class="product-item__old-price">
+                                            $27.00
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="product-item__old-price">
-                                    $27.00
+                                <div class="product-item__content-box">
+                                    <p class="product-item__text">
+                                        Lorem ipsum dolor sit amet, adipiscing
+                                        elit, sed de eusmod utlitoi labore et
+                                        dolore magna aliqua.
+                                    </p>
+                                    <button class="product-item__btn">
+                                        Add to cart
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -741,16 +821,32 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="star" data-rateyo-rating="5"></div>
-                            <h4 class="product-item__title">
-                                White Polo Men’s T-Shirt
-                            </h4>
-                            <div class="product-item__price">
-                                <div class="product-item__new-price">
-                                    $34.00
+                            <div class="product-item__wrapper-box">
+                                <div class="product-item__box">
+                                    <div
+                                        class="star"
+                                        data-rateyo-rating="4"></div>
+                                    <h4 class="product-item__title">
+                                        White Polo Men’s T-Shirt
+                                    </h4>
+                                    <div class="product-item__price">
+                                        <div class="product-item__new-price">
+                                            $34.00
+                                        </div>
+                                        <div class="product-item__old-price">
+                                            $27.00
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="product-item__old-price">
-                                    $27.00
+                                <div class="product-item__content-box">
+                                    <p class="product-item__text">
+                                        Lorem ipsum dolor sit amet, adipiscing
+                                        elit, sed de eusmod utlitoi labore et
+                                        dolore magna aliqua.
+                                    </p>
+                                    <button class="product-item__btn">
+                                        Add to cart
+                                    </button>
                                 </div>
                             </div>
                         </div>
