--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,9 @@
         <img class="logo__img" src="images/logo.png" alt="logo" />
       </a>
       <nav class="menu">
+        <button class="menu__btn">
+          <span></span>
+        </button>
         <ul class="menu__list">
           <li class="menu__list-item">
             <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
@@ -711,7 +714,9 @@
     </ul>
   </div>
 </div>
-<section class="blog">
+
+
+      <section class="blog">
   <div class="container">
     <h3 class="title">From Our Blog</h3>
     <p class="text">
