--- a/app/module/_shop/_shop.html
+++ b/app/module/_shop/_shop.html
@@ -1,6 +1,20 @@
 <section class="shop">
   <div class="container">
     <div class="shop__inner">
+      <button class="shop__filter-btn">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          height="48"
+          viewBox="0 -960 960 960"
+          width="48">
+          <path
+            fill="#fff"
+            d="M440-160q-17
+          0-28.5-11.5T400-200v-240L161-745q-14-17-4-36t31-19h584q21 0 31 19t-4
+          36L560-440v240q0 17-11.5 28.5T520-160h-80Zm40-276 240-304H240l240
+          304Zm0 0Z" />
+        </svg>
+      </button>
       <div class="shop__filters filter">
         <div class="filter-search filter__item">
           <h3 class="filter__title">Search</h3>
