--- a/app/shop.html
+++ b/app/shop.html
@@ -16,6 +16,9 @@
         <img class="logo__img" src="images/logo.png" alt="logo" />
       </a>
       <nav class="menu">
+        <button class="menu__btn">
+          <span></span>
+        </button>
         <ul class="menu__list">
           <li class="menu__list-item">
             <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
@@ -93,6 +96,20 @@
             <section class="shop">
   <div class="container">
     <div class="shop__inner">
+      <button class="shop__filter-btn">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          height="48"
+          viewBox="0 -960 960 960"
+          width="48">
+          <path
+            fill="#fff"
+            d="M440-160q-17
+          0-28.5-11.5T400-200v-240L161-745q-14-17-4-36t31-19h584q21 0 31 19t-4
+          36L560-440v240q0 17-11.5 28.5T520-160h-80Zm40-276 240-304H240l240
+          304Zm0 0Z" />
+        </svg>
+      </button>
       <div class="shop__filters filter">
         <div class="filter-search filter__item">
           <h3 class="filter__title">Search</h3>
@@ -963,6 +980,7 @@
     </div>
   </div>
 </section>
+
 
 
             
